--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-password-checklist": "^1.5.1",
-    "sonner": "^1.4.3"
+    "sonner": "^1.4.3",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
